--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
+    "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^18.2.14",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
@@ -39,7 +41,7 @@
     "typescript": "~5.5.2"
   },
   "overrides": {
-    "ngx-bootstrap":{
+    "ngx-bootstrap": {
       "@angular/common": "$@angular/common",
       "@angular/core": "$@angular/core",
       "@angular/forms": "$@angular/forms",
