--- a/client/angular.json
+++ b/client/angular.json
@@ -29,6 +29,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootswatch/dist/cyborg/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
