--- a/client/angular.json
+++ b/client/angular.json
@@ -33,7 +33,8 @@
               "node_modules/bootswatch/dist/cyborg/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/ngx-spinner/animations/line-spin-clockwise-fade.css"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.js"]
           },
