--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^4.0.0",
     "ngx-bootstrap": "^18.1.3",
     "ngx-spinner": "^18.0.0",
     "ngx-toastr": "^19.0.0",
